# Event-Driven-Trading-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  trading.db
config/: default.yaml
src/trading/backtest/: engine.py
src/trading/bus/: event_bus.py
src/trading/events/: types.py
src/trading/execution/: simulator.py
src/trading/logger/: handler.py
src/trading/market_data/: csv_loader.py  feed.py  yfinance_loader.py
src/trading/metrics/: calculator.py
src/trading/order_manager/: manager.py
src/trading/persistence/: sqlite_writer.py
src/trading/portfolio/: tracker.py
src/trading/risk/: manager.py
src/trading/signal/: generator.py  ma_crossover.py  rsi.py
src/trading/visualization/: chart.py
tests/: test_backtest_engine.py  test_csv_loader.py  test_equity_chart.py  test_event_bus.py  test_execution.py  test_ma_crossover.py  test_market_data.py  test_metrics.py  test_order_manager.py  test_portfolio_tracker.py  test_risk_manager.py  test_rsi_strategy.py  test_signal.py  test_sqlite_writer.py  test_yfinance_loader.py
